<resources>
    <string name="app_name">Online Grocery App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="register_user">Register User</string>
</resources>