<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite">
        </TextView>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iconTv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_key_white"
        android:layout_marginBottom="40dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true">
    </ImageView>

    <EditText
        android:id="@+id/sellerEmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconTv"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_mail_gray"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress">
    </EditText>
    <EditText
        android:id="@+id/sellerPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerEmailET"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_rect02">
    </EditText>
    <TextView
        android:id="@+id/forgotTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/forgot_password"
        android:layout_below="@id/sellerPasswordET"
        android:layout_alignParentEnd="true">
    </TextView>

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotTv"
        android:layout_centerHorizontal="true"
        android:minWidth="120dp"
        android:text="@string/login">
    </Button>

    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/loginBtn"
        android:text="@string/not_have_account_register">

    </TextView>
</RelativeLayout>