<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ForgotPasswordActivity">

  <!--Toolbar-->
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:padding="10dp"
      android:background="@drawable/shape_rect01">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@null"
        android:src="@drawable/ic_back_white">

    </ImageButton>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/recover_password"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>
  </RelativeLayout>
  <ImageView
      android:id="@+id/iconTv"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:background="@drawable/shape_circle01"
      android:layout_marginTop="60dp"
      android:src="@drawable/ic_key_white"
      android:layout_marginBottom="40dp"
      android:padding="5dp"
      android:layout_centerHorizontal="true">
  </ImageView>

  <EditText
      android:id="@+id/sellerEmailET"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/iconTv"
      android:hint="@string/email"
      android:drawableStart="@drawable/ic_mail_gray"
      android:drawablePadding="5dp"
      android:layout_margin="5dp"
      android:inputType="textEmailAddress"
      android:background="@drawable/shape_rect02">
  </EditText>

  <Button
      android:id="@+id/recoverBtn"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/sellerEmailET"
      android:layout_centerHorizontal="true"
      android:minWidth="120dp"
      android:text="@string/recover">
  </Button>

  <TextView
      android:id="@+id/noAccountTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:text="@string/not_have_account_register"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true">
  </TextView>
</RelativeLayout>