<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegisterUserActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/ic_back_white">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_user"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/gpsBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_gps_white">
        </ImageButton>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iconTv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_circle01"
        android:padding="5dp"
        android:src="@drawable/ic_key_white">
    </ImageView>

    <ImageView
        android:id="@+id/sellerProfileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/iconTv"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_person_gray">
    </ImageView>

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerProfileIv"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_person_gray"
        android:drawablePadding="5dp"
        android:hint="Full Name"
        android:inputType="textPersonName|textCapWords">
    </EditText>

    <EditText
        android:id="@+id/userPhoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameET"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_phone_gray"
        android:drawablePadding="5dp"
        android:hint="Phone"
        android:inputType="phone">
    </EditText>

    <LinearLayout
        android:id="@+id/address_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoneET"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sellerCountryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:hint="Country"
            android:inputType="textPostalAddress">
        </EditText>

        <EditText
            android:id="@+id/sellerStateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:hint="State"
            android:inputType="textPostalAddress">
        </EditText>

        <EditText
            android:id="@+id/sellerCityET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_location_gray"
            android:drawablePadding="5dp"
            android:hint="City"
            android:inputType="textPostalAddress">
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/sellerAddressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_LL"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_location_gray"
        android:drawablePadding="5dp"
        android:hint="Complete Address"
        android:inputType="textPostalAddress|textMultiLine">
    </EditText>

    <EditText
        android:id="@+id/sellerEmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerAddressET"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_mail_gray"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/sellerPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerEmailET"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:id="@+id/sellerConfPassET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerPasswordET"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_lock_gray"
        android:drawablePadding="5dp"
        android:hint="Confirm Password"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/sellerRegisterBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerConfPassET"
        android:layout_centerHorizontal="true"
        android:minWidth="120dp"
        android:text="Register"></Button>

    <TextView
        android:id="@+id/registerSellerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sellerRegisterBtn"
        android:layout_marginTop="20dp"
        android:text="Are you seller? Register as Seller">
    </TextView>

</RelativeLayout>